fix align display ebird checklsit

--- a/src/main.scss
+++ b/src/main.scss
@@ -37,7 +37,7 @@ h1 {
 }
 
 .control-ebird {
-  width: 200px;
+  width: 180px;
   border: 2px solid rgba(0, 0, 0, 0.2);
   background: #fff;
   border-radius: 4px;
